Added support for Terraform debug log output when debug_mode is enabled.
Added the output of a deleted instance family to the INSTALL.md
document.

--- a/templates/DEFAULT_EC2_TEMPLATE.j2
+++ b/templates/DEFAULT_EC2_TEMPLATE.j2
@@ -131,6 +131,8 @@ resource "aws_spot_instance_request"  "{{ instance_name }}" {
     }
   }
 {% endif %}
+  # add a provisioner to mount EFS here
+  # add a provisioner to mount Lustre here
 }
 {% if request_type == "ondemand" %}
 output "instance_ip_addresses" {
