--- a/templates/kill_instance.j2
+++ b/templates/kill_instance.j2
@@ -2,7 +2,7 @@
 # Name:		kill_instance.{{ instance_name }}.sh
 # Author:	Rodney Marable <rodney.marable@gmail.com>
 # Created On:	June 3, 2019
-# Last Changed:	June 12, 2019
+# Last Changed:	June 16, 2019
 # Deployed On:	{{ lookup('pipe','date \"+%B %-d, %Y\"') }}
 # Purpose:	Destroy EC2 instance {{ instance_name }}
 ###############################################################################
@@ -43,9 +43,9 @@ echo ""
 
 cd $INSTANCE_DATA_DIR
 {% if request_type == 'ondemand' %}
-terraform destroy -auto-approve -target=aws_instance.${INSTANCE_NAME}
+{% if debug_mode == 'true' %}TF_LOG=DEBUG {% endif %}terraform destroy -auto-approve -target=aws_instance.${INSTANCE_NAME}
 {% else %}
-terraform destroy -auto-approve -target=aws_spot_instance_request.${INSTANCE_NAME}
+{% if debug_mode == 'true' %}TF_LOG=DEBUG {% endif %}terraform destroy -auto-approve -target=aws_spot_instance_request.${INSTANCE_NAME}
 {% endif %}
 cd $SRC_TREE_DIR
 
