--- a/templates/DEFAULT_EC2_TEMPLATE.j2
+++ b/templates/DEFAULT_EC2_TEMPLATE.j2
@@ -2,7 +2,7 @@
 # Name:		{{ instance_name }}.tf
 # Author:	Rodney Marable <rodney.marable@gmail.com>
 # Created On:	June 3, 2019
-# Last Changed:	June 22, 2019
+# Last Changed:	July 1, 2019
 # Deployed On:	{{ lookup('pipe','date \"+%B %-d, %Y\"') }}
 {% if count > 1 %}
 # Purpose:	Terraform template for instance family {{ instance_name }}
@@ -10,6 +10,14 @@
 # Purpose:	Terraform template for instance {{ instance_name }}
 {% endif %}
 ################################################################################
+{% if enable_placement_group == 'true' %}
+
+resource "aws_placement_group" "ec2pg-{{ instance_name }}" {
+  name            =  "ec2pg-{{ instance_serial_number }}"
+  provider        = "{{ provider }}"
+  strategy        =  "{{ placement_group_strategy }}"
+}
+{% endif %}
 {% if enable_efs == 'true' %}
 
 resource "aws_efs_file_system"  "efs-{{ instance_name }}" {
@@ -72,6 +80,9 @@ resource "aws_spot_instance_request"  "{{ instance_name }}" {
   instance_type             = "{{ instance_type }}"
   key_name                  = "{{ ec2_keypair }}"
   monitoring                = "true"
+{% if enable_placement_group == 'true' %}
+  placement_group           = "ec2pg-{{ instance_name }}"
+{% endif %}
   provider                  = "{{ provider }}"
   root_block_device {
     volume_size             = "{{ ebs_root_volume_size }}"
