--- a/templates/kill_instance.j2
+++ b/templates/kill_instance.j2
@@ -2,7 +2,7 @@
 # Name:		kill_instance.{{ instance_name }}.sh
 # Author:	Rodney Marable <rodney.marable@gmail.com>
 # Created On:	June 3, 2019
-# Last Changed:	June 22, 2019
+# Last Changed:	July 1, 2019
 # Deployed On:	{{ lookup('pipe','date \"+%B %-d, %Y\"') }}
 # Purpose:	Destroy EC2 instance {{ instance_name }}
 ###############################################################################
@@ -109,6 +109,11 @@ then
 	rm -rf $INSTANCE_DATA_DIR
 	echo "Deleted directory: $INSTANCE_DATA_DIR"
 fi
+
+{% if enable_placement_group == 'true' %}
+# Delete the EC2 placement group.
+
+aws ec2 delete-placement-group --group-name ec2_pg-{{ instance_serial_number }}
 
 # Send an SNS notification that the instance is being terminated.
 
