--- a/templates/access_instance.j2
+++ b/templates/access_instance.j2
@@ -2,7 +2,7 @@
 # Name:		access_instance.{{ instance_name }}.j2
 # Author:       Rodney Marable <rodney.marable@gmail.com>
 # Created On:   June 8, 2019
-# Last Changed: June 22, 2019
+# Last Changed: July 1, 2019
 # Deployed On:	{{ lookup('pipe','date \"+%B %-d, %Y\"') }}
 {% if base_os == 'windows2019' %}
 # Purpose:	Provide a quick reference for Windows Administrator passwords
@@ -21,9 +21,9 @@ import sys
 from prettytable import from_csv
 
 # Function: menuCount()
-# Purpose: Iterate through a list from item_value=low to item_value=high
+# Purpose: iterate through a list from item_value=low to item_value=high
 #
-# This function would noramlly be defined within aux_data.py but importing
+# This function would normally be defined within aux_data.py but importing
 # from non-local directories makes the code look ugly and unPythonic.
 
 def menuCount(low, high):
@@ -178,7 +178,7 @@ with open(csvTempFile, newline='') as infh:
 subprocess.run('ssh -i ' + ec2_keypair + '.pem -l {{ ec2_user }} ' + ec2_IpAddress, shell=True, cwd=instance_data_dir)
 {% endif %}
 
-# Print reconnection information to the console.
+# Print SSH reconnection information to the console.
 
 print('')
 {% if count > 1 %}
