--- a/templates/kill_instance.j2
+++ b/templates/kill_instance.j2
@@ -2,7 +2,7 @@
 # Name:		kill_instance.{{ instance_name }}.sh
 # Author:	Rodney Marable <rodney.marable@gmail.com>
 # Created On:	June 3, 2019
-# Last Changed:	July 1, 2019
+# Last Changed:	July 2, 2019
 # Deployed On:	{{ lookup('pipe','date \"+%B %-d, %Y\"') }}
 # Purpose:	Destroy EC2 instance {{ instance_name }}
 ###############################################################################
@@ -115,6 +115,7 @@ fi
 
 aws ec2 delete-placement-group --group-name ec2_pg-{{ instance_serial_number }}
 
+{% endif %}
 # Send an SNS notification that the instance is being terminated.
 
 {% if count > 1 %}
