Added some new features:
- creating new AMIs from instances spawned by Ec2InstanceMaker with a
new "build-ami" script that is customized for each instance or instance
family

- preserving these new AMIs outside of the instance lifecycle with
"--preserve_ami"

- separate custom_user_script template so users don't have to edit any
of the system templates in order to customize their EC2 instances

--- a/templates/DEFAULT_EC2_TEMPLATE.j2
+++ b/templates/DEFAULT_EC2_TEMPLATE.j2
@@ -151,10 +151,22 @@ resource "aws_spot_instance_request"  "{{ instance_name }}" {
     private_key = "${file("{{ ssh_keypair_file }}")}"
     }
   }
+  provisioner "file" {
+    source      = "{{ custom_user_script }}"
+    destination = "/tmp/{{ custom_user_script }}"
+  connection {
+    type        = "ssh"
+    host        = self.public_ip
+    user        = "{{ ec2_user }}"
+    agent       =  false
+    private_key = "${file("{{ ssh_keypair_file }}")}"
+    }
+  }
   provisioner "remote-exec" {
     inline = [
       "chmod 0755 /tmp/{{ build_instance_script }}",
       "sh /tmp/{{ build_instance_script }}",
+      "sh /tmp/{{ custom_user_script }}",
     ]
   connection {
     type        = "ssh"
