--- a/templates/build_instance.j2
+++ b/templates/build_instance.j2
@@ -4,7 +4,7 @@
 # Name:		build_instance.{{ instance_name }}.sh
 # Author:	Rodney Marable <rodney.marable@gmail.com>
 # Created On:	June 3, 2019
-# Last Changed:	June 24, 2019
+# Last Changed:	July 3, 2019
 # Deployed On:	{{ lookup('pipe','date \"+%B %-d, %Y\"') }}
 # Purpose:	Perform some additional post-installation configuration steps
 #		on EC2 instance {{ instance_name }}
@@ -220,22 +220,18 @@ do
 done
 {% endif %}
 {% endif %}
-
 {% if base_os == 'centos6' %}
+
 # Reread the partition table of the root volume.
 
 sudo partprobe
 {% endif %}
 
-###############################################################
-## Starting point for user-added EC2 instance customizations ##
-###############################################################
-
-
-#############################################################
-## Ending point for user-added EC2 instance customizations ##
-#############################################################
+#######################################################################
+# Paste any additional user customizations into custom_user_script.j2 #
+#######################################################################
 
 # Cleanup and exit.
 
+echo "Exiting..."
 exit 0
